# vrc_avatar_changer3

./: .gitignore  AGENTS.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture-draft.md  legacy-analysis.md  requirements.md
src/: App.vue  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  cache.rs  commands.rs  lib.rs  main.rs  models.rs  osc.rs  settings.rs  vrchat.rs
src/components/: AvatarDialog.vue  AvatarGrid.vue  EyeHeightDialog.vue  LoginCard.vue  SearchToolbar.vue  SettingsCard.vue  StatusPanel.vue
src/lib/: avatarImage.test.ts  avatarImage.ts  avatarUploadErrors.test.ts  avatarUploadErrors.ts  commands.ts  tags.test.ts  tags.ts
